--- a/searchprogm/app/src/main/res/layout/show_food.xml
+++ b/searchprogm/app/src/main/res/layout/show_food.xml
@@ -6,46 +6,44 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NewActivity">
 
-    <TextView
-        android:id="@+id/ingredients"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Інгредієнти:"
-        android:layout_marginTop="36dp"
-        android:layout_below="@+id/foodView"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="31dp"
-        android:layout_marginStart="31dp" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Назва: "
-        android:id="@+id/namefood" android:layout_gravity="left|center_vertical"
-        android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/foodView"
-        android:layout_alignStart="@+id/foodView" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Назад"
-        android:onClick="back"
-        android:id="@+id/back_button" android:layout_gravity="left|center_vertical"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/foodView"
-        android:minHeight="200dp"
-        android:minWidth="200dp"
-        android:maxHeight="300dp"
-        android:maxWidth="300dp"
-        android:focusableInTouchMode="false"
-        android:longClickable="false"
-        android:layout_below="@+id/namefood"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="38dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/name"
+            android:id="@+id/namefood"
+            android:layout_gravity="center_horizontal" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/foodView"
+            android:layout_gravity="center_horizontal"
+            android:minWidth="200dp"
+            android:minHeight="200dp"
+            android:maxHeight="300dp"
+            android:maxWidth="300dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/ingredients"
+            android:id="@+id/ingredients"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/back"
+            android:id="@+id/back_button"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 </RelativeLayout>
