--- a/searchprogm/app/src/main/res/layout/show_ingredient_inf.xml
+++ b/searchprogm/app/src/main/res/layout/show_ingredient_inf.xml
@@ -12,7 +12,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,15 +48,21 @@
                 android:text="@string/information"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
-            <Button
-                android:id="@+id/back_button"
-                android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:onClick="back"
-                android:text="@string/back" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/links"
+                android:id="@+id/links"
+                android:layout_marginBottom="24dp"
+                android:autoLink="web"/>
+
         </LinearLayout>
 
     </ScrollView>
+
+
+
+
 
 </RelativeLayout>
