create global constant

--- a/searchprogm/app/src/main/res/layout/show_food.xml
+++ b/searchprogm/app/src/main/res/layout/show_food.xml
@@ -111,7 +111,8 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:id="@+id/">
 
                     <TextView
                         android:id="@+id/label_carbs"
