--- a/searchprogm/app/src/main/res/layout/show_food.xml
+++ b/searchprogm/app/src/main/res/layout/show_food.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:imeOptions="actionDone"
@@ -14,13 +15,13 @@
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:orientation="vertical">
+            android:layout_alignParentStart="true">
 
             <TextView
                 android:id="@+id/namefood"
@@ -47,6 +48,14 @@
                 android:minHeight="200dp"
                 android:minWidth="200dp" />
 
+            <com.application.yaroslav.searchprogm.speedometer.Speedometer
+                android:id="@+id/Speedometer"
+                android:layout_width="400dp"
+                android:layout_height="300dp"
+                custom:currentSpeed="1"
+                custom:maxSpeed="11"
+                android:layout_gravity="center_horizontal" />
+
             <TextView
                 android:id="@+id/ingredients"
                 android:layout_width="wrap_content"
@@ -57,7 +66,7 @@
 
             <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="85dp">
+                android:layout_height="90dp">
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -111,8 +120,7 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/">
+                    android:layout_height="match_parent">
 
                     <TextView
                         android:id="@+id/label_carbs"
@@ -139,7 +147,8 @@
                 android:onClick="back"
                 android:text="@string/back" />
         </LinearLayout>
-
     </ScrollView>
+
+
 
 </RelativeLayout>
